--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <title>Document</title><link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
 </head>
-<body class="container p-0">
-    <header class="m-0 p-0">
+<body class="overflow-x-hidden">
+    <header class="container">
         <nav class="navbar navbar-expand-md m-2 sticky-top">
             <div class="container-fluid">
                 <div class="navbar-brand col-3 col-md-1">
@@ -29,8 +29,8 @@
                         <li class="list-group-item bg-transparent border-0 nav-item me-3"><a href="#featuresSection" class="nav_text link_nav_section">FEATURES</a></li>
                         <li class="list-group-item bg-transparent border-0 nav-item me-3"><a href="#screensSection" class="nav_text link_nav_section">SCREENS</a></li>
                         <li class="list-group-item bg-transparent border-0 nav-item me-3">
-                            <div class="btn-group" role="group">
-                                <button type="button" class="btn_extra dropdown-toggle p-0 bg-transparent nav-item nav_text" data-bs-toggle="dropdown" aria-expanded="false">
+                            <div class="btn-group dropdown" role="group">
+                                <button type="button" class="btn_extra dropdown-toggle p-0 bg-transparent nav-item nav_text" id="dropdownMenuButton" data-toggle="dropdown" data-bs-toggle="dropdown" aria-expanded="false">
                                 EXTRA
                                 </button>
                                 <ul class="dropdown-menu p-0 bg-light">
@@ -46,23 +46,28 @@
             </div>
         </nav>
     </header>
-    <main class="container m-0 p-0 d-flex flex-column align-items-center">
-        <section class="container-fluid position-relative mt-4 z-1 p-0" id="mobileApp">
-            <div class="d-flex justify-content-between">
+    <main class="m-0 p-0 d-flex flex-column align-items-center">
+        <section class="position-relative mt-4 z-1 p-0" id="mobileApp">
+            <div class="d-flex justify-content-between mx-2">
                 <img src="images/decorative-green-diamond.svg" alt="Green Diamond" id="green_diamond">
                 <img src="images/decorative-yellow-circle.svg" alt="Yellow Circle" id="yellow_circle">
+            </div>
+            <div>
+                <img src="images/decorative-blue-circle.svg" alt="Blue circle" id="blue_circle" class="z-0 position-absolute">
+                <img src="images/decorative-white-circle.svg" alt="White circle" id="white1_circle" class="z-n1 position-absolute">
+                <img src="images/decorative-white-circle.svg" alt="White circle" id="white2_circle" class="z-n1 position-absolute">
             </div>
             <div class="d-flex flex-column justify-content-center align-items-center">
                 <h1 class="text-center">Mobile App Landing Page</h1>
                 <p class="w-75 text-center">Start focusing on your goals and get more things done with Sync mobile application. It's the first app to harness the power of social connections to help you stay focused and get organized</p>
                 <div class="d-flex btn_group">
-                    <button class="btn_section d-flex align-items-center justify-content-center p-3 m-auto" type="button">
+                    <button class="btn_section d-flex align-items-center justify-content-center p-3 m-auto z-1" type="button">
                         <img src="images/apple-24.png" class="img-fluid" alt="logo apple">
-                        <p class="btn_text p-0 m-0">DOWNLOAD</p>
+                        <p class="btn_text p-0 m-0 ms-2">DOWNLOAD</p>
                     </button>
                     <button class="btn_section d-flex align-items-center justify-content-center p-3 ms-2" type="button">
                         <img src="images/Daco_4111882.png" alt="play store logo">
-                       <p class="btn_text p-0 m-0">DOWNLOAD</p>
+                       <p class="btn_text p-0 m-0 ms-2">DOWNLOAD</p>
                     </button>
                 </div>
             </div>
@@ -100,12 +105,9 @@
                 </li>
             </ul>
         </section>
-        <img src="images/decorative-blue-circle.svg" alt="Blue circle" id="blue_circle" class="z-0 position-absolute">
-        <img src="images/decorative-white-circle.svg" alt="White circle" id="white1_circle" class="z-n1 position-absolute">
-        <img src="images/decorative-white-circle.svg" alt="White circle" id="white2_circle" class="z-n1 position-absolute">
-        <hr id="descriptionSection">
-        <section class="container-fluid section_box">
-            <section class="container row m-4">
+        <hr id="descriptionSection" class="hr_separador">
+        <section class="section_box">
+            <section class="row m-4 px-md-5">
                 <img src="images/description-1-app.png" class="col-md-6 col-12 img-fluid mb-4 mb-md-0" alt="description_section">
                 <div class="col justify-content-around">
                     <h2>Organize Your Time And Start Getting Results</h2>
@@ -118,17 +120,159 @@
                     <button class="btn_section p-0 m-0">LIGHTBOX</button>
                 </div>
             </section>
-            <section>
-                <h2>Calendar</h2>
+            <section class="row my-5 dark_section p-3 p-md-5"> 
+                <div class="col justify-content-around">
+                    <div class="row row-cols-md-1 row-cols-6">
+                        <div class="calendar_skills col-3 col-md-auto calendar_schedule mt-2 mt-md-0">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-clock-hour-4 img-fluid" width="16" height="16" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                                <path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0" />
+                                <path d="M12 12l3 2" />
+                                <path d="M12 7v5" />
+                              </svg>
+                            <p>Schedule</p>
+                        </div>
+                        <div class="calendar_skills col-3 col-md-auto mt-2 mt-md-0">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-menu-2" width="16" height="16" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                                <path d="M4 6l16 0" />
+                                <path d="M4 12l16 0" />
+                                <path d="M4 18l16 0" />
+                              </svg>
+                            <p>Tracking</p>
+                        </div>  
+                    </div>
+                    <div class="calendar_skills m-0 mb-2 box_organize">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-calendar-event" width="16" height="16" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                            <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                            <path d="M4 5m0 2a2 2 0 0 1 2 -2h12a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2z" />
+                            <path d="M16 3l0 4" />
+                            <path d="M8 3l0 4" />
+                            <path d="M4 11l16 0" />
+                            <path d="M8 15h2v2h-2z" />
+                        </svg>
+                        <p>Organize</p>
+                    </div>  
+                    <p><span class="text-black">Schedule tasks</span> to keep track of their completion. Sync provides multiple scheduling options including alarms and reminders.</p>
+                    <ul>
+                        <li class="text_list checkmark">You can always add new tasks or change the settings of existing ones in your calendar view or the app control panel</li>
+                        <li class="text_list checkmark">It's easy to stay focused on your most important daily activities that will get you closer to meeting your goals</li>
+                        <li class="text_list checkmark">Use phone reminders to free up your long term memory which will reduce stress and make you more productive</li>
+                    </ul>
+                    <button class="btn_section p-0 m-0">TERMS</button>
+                    <button class="btn_section p-0 m-0" id="btn_privacy">PRIVACY</button>
+                </div>
+                <img src="images/description-2-app.png" alt="description-2-app" class="col-md-6 col-12 img-fluid mt-4 mt-md-0">
             </section>
         </section>
-        <hr id="featuresSection">
+        <hr id="featuresSection"  class="hr_separador">
         <section class="container section_box">
-            <h2>Testimonials</h2>
+            <h2 class="text-center">User Testimonials</h2>
+            <section class="row mt-5">
+                <article class="container col-6 col-md-4 text-center d-flex flex-column justify-content-center align-items-center">
+                    <img src="images/star-solid.svg" alt="five stars" class="img_stars">
+                    <hr class="mid_line">
+                    <p class="test_text">I love using Sync for my personal development needs. It meets all my requirements and it actually helps a lot with focusing skills.</p>
+                    <p class="test_name">Rick Jones - Designer</p>
+                </article>
+                <article class="container col col-md-4 text-center d-flex flex-column justify-content-center align-items-center">
+                    <img src="images/star-solid.svg" alt="five stars" class="img_stars">
+                    <hr class="mid_line">
+                    <p class="test_text">After trying out a large number of personal coaching apps I decided to give Sync a try and what a wonderful surprise it was.</p>
+                    <p class="test_name">Lynda Marquez - Developer</p>
+                </article>
+                <article class="container col-6 col-md-4 text-center d-flex flex-column justify-content-center align-items-center">
+                    <img src="images/star-solid.svg" alt="five stars" class="img_stars">
+                    <hr class="mid_line">
+                    <p class="test_text">Never dreamed I could learn so fast how to focus on my personal goals and improve my life to levels I never thought possible.</p>
+                    <p class="test_name">Jay Frisco - Marketer</p>
+                </article>
+            </section>
+            <section class="bg-light py-4 section_logos">
+                <img src="images/customer-logo-1.png" alt="primester logo" class="img_fluid mw-50 img_logos1">
+                <img src="images/customer-logo-2.png" alt="greenapp logo" class="img_fluid mw-50 img_logos2">
+                <img src="images/customer-logo-3.png" alt="voltemer logo" class="img_fluid mw-50 img_logos3">
+                <img src="images/customer-logo-4.png" alt="keyrunner logo" class="img_fluid mw-50 img_logos4">
+                <img src="images/customer-logo-5.png" alt="amplifier logo" class="img_fluid mw-50 img_logos5">
+            </section>
+            <section class="row mt-5">
+                <article class="container col-6 col-md-4 text-center d-flex flex-column justify-content-center align-items-center">
+                    <img src="images/star-solid.svg" alt="five stars" class="img_stars">
+                    <hr class="mid_line">
+                    <p class="test_text">I got so much value from using Sync in my daily life for which I am very grateful and would recommend it to everybody</p>
+                    <p class="test_name">Frank Gibson - Manager</p>
+                </article>
+                <article class="container col col-md-4 text-center d-flex flex-column justify-content-center align-items-center">
+                    <img src="images/star-solid.svg" alt="five stars" class="img_stars">
+                    <hr class="mid_line">
+                    <p class="test_text">If you have great goals but can't figure out a way to keep focused then you should definitely give Sync a try and see the results</p>
+                    <p class="test_name">Rita Longmile - Designer</p>
+                </article>
+                <article class="container col-6 col-md-4 text-center d-flex flex-column justify-content-center align-items-center">
+                    <img src="images/star-solid.svg" alt="five stars" class="img_stars">
+                    <hr class="mid_line">
+                    <p class="test_text">I've been looking for a great organizer app for such a long time but now I am really happy that I found Sync. It's been working great</p>
+                    <p class="test_name">Jones Smith - Developer</p>
+                </article>
+            </section>
         </section>
-        <hr id="screensSection">
-        <section class="container section_box">
-            <h2>Screens</h2>
+        <hr id="screensSection" class="hr_separador">
+        <section class="">
+            <ul class="dark_section list-group list-group-horizontal d-flex justify-content-center align-items-center justify-content-between m-0 p-5">
+                <li class="list-group-item bg-transparent border-0 d-flex flex-column align-items-center">
+                    <div>
+                        <img src="/images/9F47DFB5-952B-45AB-8592-A0B70FA1C4EA.png" class="screens_icon" alt="people">
+                    </div>
+                    <p class="mt-1 numbers_screens">231</p>
+                    <p class="text_views">Happy Users</p>
+                </li>
+                <li class="list-group-item bg-transparent border-0 d-flex flex-column align-items-center">
+                    <div>
+                        <img src="/images/5EDF65CE-C5BF-41AE-A2D1-65BCFF60610C.png" class="screens_icon" alt="code">
+                    </div>
+                    <p class="mt-2 numbers_screens">385</p>
+                    <p class="text_views">Issues Solved</p>
+                </li>
+                <li class="list-group-item bg-transparent border-0 d-flex flex-column align-items-center">
+                    <div>
+                        <img src="/images/F91326ED-B8BE-4D88-966E-FBA0841E90C8.png" class="screens_icon" alt="tools">
+                    </div>
+                    <p class="mt-2 numbers_screens">159</p>
+                    <p class="text_views">Good Reviews</p>
+                </li>
+                <li class="list-group-item bg-transparent border-0 d-flex flex-column align-items-center">
+                    <div>
+                        <img src="/images/FAE855F7-67D9-4E49-8C16-8FCF80AE60D2.png" class="screens_icon" alt="social">
+                    </div>
+                    <p class="mt-2 numbers_screens">127</p>
+                    <p class="text_views">Case Studies</p>
+                </li>
+                <li class="list-group-item bg-transparent border-0 d-flex flex-column align-items-center">
+                    <div>
+                        <img src="/images/BA6A9CD6-05F1-4381-A26F-D39B7A7A45D8.png" class="screens_icon" alt="cohete">
+                    </div>
+                    <p class="mt-2 numbers_screens">211</p>
+                    <p class="text_views">Orders Received</p>
+                </li>
+            </ul>
+            <section>
+                <div>
+                    <img src="images/download-iphone.png" alt="phone screens" class="img-fluid h-50 mt-5">
+                </div>
+                <div class="d-flex flex-column justify-content-center align-items-center">
+                    <p class="w-75 text-center">Do you feel like you're wasting time with small stuff instead of working towards your goals? Start using Sync to organize your time and get a grip on your personal development</p>
+                    <div class="d-flex btn_group">
+                        <button class="btn_section d-flex align-items-center justify-content-center p-3 m-auto" type="button">
+                            <img src="images/apple-24.png" class="img-fluid" alt="logo apple">
+                            <p class="btn_text p-0 m-0 ms-2">DOWNLOAD</p>
+                        </button>
+                        <button class="btn_section d-flex align-items-center justify-content-center p-3 ms-2" type="button">
+                            <img src="images/Daco_4111882.png" alt="play store logo">
+                           <p class="btn_text p-0 m-0 ms-2">DOWNLOAD</p>
+                        </button>
+                    </div>
+                </div>
+            </section>
         </section>
     </main>
     <footer class="footer">
