--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Document</title><link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
 </head>
-<body class="container-fluid">
+<body class="container-fluid p-0">
     <header class="px-4">
         <!-- NAVBAR -->
         <nav class="navbar navbar-expand-md sticky-top d-flex align-items-center">
@@ -115,7 +115,7 @@
         <!-- SECTION DESCRIPTION -->
         <section class="section_box container-fluid p-0">
             <!-- DESCRIPTION 1 -->
-            <section class="row row-cols-2 m-4 px-md-5 container-fluid p-0">
+            <section class="row row-cols-2 m-4 px-md-50">
                 <img src="images/description-1-app.png" class="col-md-6 col-12 mt-4 mt-md-0 img-fluid mb-4 mb-md-0" alt="description_section">
                 <div class="col-12 col-md-6 d-flex flex-column justify-content-center">
                     <h2>Organize Your Time And Start Getting Results</h2>
@@ -129,10 +129,10 @@
                 </div>
             </section>
             <!-- DESCRIPTION 2 -->
-            <section class="row my-5 dark_section p-3 p-md-5 container-fluid p-0"> 
+            <section class="row mt-4 p-4 dark_section"> 
                 <div class="col d-flex flex-column justify-content-center">
                     <div class="row row-cols-md-1 row-cols-6">
-                        <div class="calendar_skills col-3 col-md-auto calendar_schedule mt-2 mt-md-0">
+                        <div class="calendar_skills col-5 col-md-auto calendar_schedule mt-2 mt-md-0">
                             <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-clock-hour-4 img-fluid" width="16" height="16" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
                                 <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                                 <path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0" />
@@ -141,7 +141,7 @@
                               </svg>
                             <p>Schedule</p>
                         </div>
-                        <div class="calendar_skills col-3 col-md-auto mt-2 mt-md-0">
+                        <div class="calendar_skills col-5 col-md-auto mt-2 mt-md-0">
                             <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-menu-2" width="16" height="16" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
                                 <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                                 <path d="M4 6l16 0" />
@@ -151,7 +151,7 @@
                             <p>Tracking</p>
                         </div>  
                     </div>
-                    <div class="calendar_skills m-0 mb-2 box_organize">
+                    <div class="calendar_skills mb-2 box_organize">
                         <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-calendar-event" width="16" height="16" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                             <path d="M4 5m0 2a2 2 0 0 1 2 -2h12a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2z" />
@@ -168,8 +168,10 @@
                         <li class="text_list checkmark">It's easy to stay focused on your most important daily activities that will get you closer to meeting your goals</li>
                         <li class="text_list checkmark">Use phone reminders to free up your long term memory which will reduce stress and make you more productive</li>
                     </ul>
-                    <button class="btn_section p-0 m-0">TERMS</button>
-                    <button class="btn_section p-0 m-0" id="btn_privacy">PRIVACY</button>
+                    <section>
+                        <button class="btn_section p-0 m-0">TERMS</button>
+                        <button class="btn_section p-0 m-0 mt-2 mt-md-0" id="btn_privacy">PRIVACY</button>
+                    </section>
                 </div>
                 <img src="images/description-2-app.png" alt="description-2-app" class="col-md-6 col-12 img-fluid mt-4 mt-md-0 calendar_img">
             </section>
@@ -183,19 +185,19 @@
                 <article class="container-fluid p-0 col-md-4 text-center d-flex flex-column justify-content-center align-items-center">
                     <img src="images/star-solid.svg" alt="five stars" class="img_stars">
                     <hr class="mid_line">
-                    <p class="test_text">I love using Sync for my personal development needs. It meets all my requirements and it actually helps a lot with focusing skills.</p>
+                    <p class="test_text px-3">I love using Sync for my personal development needs. It meets all my requirements and it actually helps a lot with focusing skills.</p>
                     <p class="test_name">Rick Jones - Designer</p>
                 </article>
-                <article class="container-fluid p-0 col-md-4 text-center d-flex flex-column justify-content-center align-items-center">
+                <article class="container-fluid p-0 col-md-4 text-center d-flex flex-column justify-content-center align-items-center mt-4 mt-md-0">
                     <img src="images/star-solid.svg" alt="five stars" class="img_stars">
                     <hr class="mid_line">
-                    <p class="test_text">After trying out a large number of personal coaching apps I decided to give Sync a try and what a wonderful surprise it was.</p>
+                    <p class="test_text px-3">After trying out a large number of personal coaching apps I decided to give Sync a try and what a wonderful surprise it was.</p>
                     <p class="test_name">Lynda Marquez - Developer</p>
                 </article>
-                <article class="container-fluid p-0 col-md-4 text-center d-flex flex-column justify-content-center align-items-center">
+                <article class="container-fluid p-0 col-md-4 text-center d-flex flex-column justify-content-center align-items-center mt-4 mt-md-0">
                     <img src="images/star-solid.svg" alt="five stars" class="img_stars">
                     <hr class="mid_line">
-                    <p class="test_text">Never dreamed I could learn so fast how to focus on my personal goals and improve my life to levels I never thought possible.</p>
+                    <p class="test_text px-3">Never dreamed I could learn so fast how to focus on my personal goals and improve my life to levels I never thought possible.</p>
                     <p class="test_name">Jay Frisco - Marketer</p>
                 </article>
             </section>
@@ -207,22 +209,22 @@
                 <img src="images/customer-logo-5.png" alt="amplifier logo" class="img-fluid mw-50 img_logos5">
             </section>
             <section class="row mt-5 container-fluid p-0">
-                <article class="container-fluid p-0 col-md-4 text-center d-flex flex-column justify-content-center align-items-center">
+                <article class="container-fluid p-0 col-md-4 text-center d-flex flex-column justify-content-center align-items-center mt-4 mt-md-0">
                     <img src="images/star-solid.svg" alt="five stars" class="img_stars">
                     <hr class="mid_line">
-                    <p class="test_text">I got so much value from using Sync in my daily life for which I am very grateful and would recommend it to everybody</p>
+                    <p class="test_text px-3">I got so much value from using Sync in my daily life for which I am very grateful and would recommend it to everybody</p>
                     <p class="test_name">Frank Gibson - Manager</p>
                 </article>
-                <article class="container-fluid p-0 col-md-4 text-center d-flex flex-column justify-content-center align-items-center">
+                <article class="container-fluid p-0 col-md-4 text-center d-flex flex-column justify-content-center align-items-center mt-4 mt-md-0">
                     <img src="images/star-solid.svg" alt="five stars" class="img_stars">
                     <hr class="mid_line">
-                    <p class="test_text">If you have great goals but can't figure out a way to keep focused then you should definitely give Sync a try and see the results</p>
+                    <p class="test_text px-3">If you have great goals but can't figure out a way to keep focused then you should definitely give Sync a try and see the results</p>
                     <p class="test_name">Rita Longmile - Designer</p>
                 </article>
-                <article class="container-fluid p-0 col-md-4 text-center d-flex flex-column justify-content-center align-items-center">
+                <article class="container-fluid p-0 col-md-4 text-center d-flex flex-column justify-content-center align-items-center mt-4 mt-md-0">
                     <img src="images/star-solid.svg" alt="five stars" class="img_stars">
                     <hr class="mid_line">
-                    <p class="test_text">I've been looking for a great organizer app for such a long time but now I am really happy that I found Sync. It's been working great</p>
+                    <p class="test_text px-3">I've been looking for a great organizer app for such a long time but now I am really happy that I found Sync. It's been working great</p>
                     <p class="test_name">Jones Smith - Developer</p>
                 </article>
             </section>
